// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Intro when all intro config is set renders the whole custom intro 1`] = `
"<div class=\\"jumbotron my-3\\">
  <h1 class=\\"display-3\\">Test Title</h1>
  <!---->
  <div>
    <p><em>Test Message</em></p>
  </div>
</div>"
`;

exports[`Intro when intro config is not set renders default intro 1`] = `
"<div class=\\"jumbotron my-3\\">
  <h1 class=\\"display-3\\">Kronicle</h1>
  <!---->
  <div>
    <p>Kronicle contains information on the organisation's components, teams and areas.</p>
  </div>
</div>"
`;

exports[`Intro when intro config is set to undefined renders default intro 1`] = `
"<div class=\\"jumbotron my-3\\">
  <h1 class=\\"display-3\\">Kronicle</h1>
  <!---->
  <div>
    <p>Kronicle contains information on the organisation's components, teams and areas.</p>
  </div>
</div>"
`;

exports[`Intro when intro.markdown config is set renders the custom intro markdown with default title 1`] = `
"<div class=\\"jumbotron my-3\\">
  <h1 class=\\"display-3\\">Kronicle</h1>
  <!---->
  <div>
    <p><em>Test Message</em></p>
  </div>
</div>"
`;

exports[`Intro when intro.title config is set renders the custom intro title with default markdown 1`] = `
"<div class=\\"jumbotron my-3\\">
  <h1 class=\\"display-3\\">Test Title</h1>
  <!---->
  <div>
    <p>Kronicle contains information on the organisation's components, teams and areas.</p>
  </div>
</div>"
`;
